api reset password and login

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
 PORT = 5000
 MONGODB_URI = mongodb://localhost:27017/ecommerce
+JWT_SECRET = lakskmaiwlalaldhfjlsll
+EMAIL_APP_PASSWORD = abeztgknnamuxnlm
+EMAIL_NAME = phuuit169@gmail.com
+URL_SERVER = http://localhost:5000
