filter, sort, pagination, ratings API

--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,4 @@ JWT_SECRET = lakskmaiwlalaldhfjlsll
 EMAIL_APP_PASSWORD = abeztgknnamuxnlm
 EMAIL_NAME = phuuit169@gmail.com
 URL_SERVER = http://localhost:5000
+LIMIT_PRODUCTS = 2
