Upload product and blog images API

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,7 @@ EMAIL_APP_PASSWORD = abeztgknnamuxnlm
 EMAIL_NAME = phuuit169@gmail.com
 URL_SERVER = http://localhost:5000
 LIMIT_PRODUCTS = 2
+CLOUDINARY_NAME='dsenevwmk'
+CLOUDINARY_KEY='356873898312826'
+CLOUDINARY_SECRET='WGBSlBMNmaiLfNN1FU0vl12VFZQ'
+
