Header and Navigation

--- a/server/.env
+++ b/server/.env
@@ -8,4 +8,5 @@ LIMIT_PRODUCTS = 2
 CLOUDINARY_NAME='dsenevwmk'
 CLOUDINARY_KEY='356873898312826'
 CLOUDINARY_SECRET='WGBSlBMNmaiLfNN1FU0vl12VFZQ'
+CLIENT_URL = http://localhost:5173
 
