--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-inner-image-zoom": "^4.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
