--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/forms": "^0.5.10",
     "axios": "^1.10.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-inner-image-zoom": "^4.0.1",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-slick": "^0.30.3",
